Staff signup added,updated some functionalities

--- a/myapp/templates/orderstatus.html
+++ b/myapp/templates/orderstatus.html
@@ -63,7 +63,7 @@
                                   <input type="hidden" id="status_value" name="status" value="">
                                   <div class="row">
                                       <div class="col">
-                                        <button href="/staffprofile/" class="btn btn-danger btn-block" >Cancel</button>
+                                        <a href="/staffprofile" class="btn btn-danger btn-block" >Cancel</a>
                                       </div>
                                       <div class="col">
                                         <button type="submit" class="btn btn-success btn-block">Update</button>
