--- a/myapp/templates/userprofile.html
+++ b/myapp/templates/userprofile.html
@@ -87,8 +87,8 @@
                                   Services
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" href="drinks">Plan for a week</a>
-                                  <a class="dropdown-item" href="drinks">Offers</a>
+                                  <a class="dropdown-item" href="schedule">Plan for a week</a>
+                                  <a class="dropdown-item" href="">Offers</a>
 
                                 </div>
                               </div>
@@ -108,7 +108,7 @@
                               <a class="dropdown-item" href="specialitems">Special items</a>
                             </div>
                           </div>
-                        <a href="login" class="nav-item nav-link">Login</a>
+                        <a href="" class="nav-item nav-link">Login</a>
                         <a href="logout" class="nav-item nav-link">Logout</a>
                     </div>
                 </div>
